# AMD_BSUIR

./: README.md  process.py  pyproject.toml  requirements.txt
amd/: Lab1.ipynb  Lab2.ipynb  Lab3.ipynb  _.py  __.py
